--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,11 +1,10 @@
 <h1>Welcome to QuizMe!</h1>
 
 <p>
-    QuizMe is a free Quizlet style quizzing application that helps you learn by taking quizzes and trying to improve your scores.
+  QuizMe is a free <%= link_to "Quizlet", "https://quizlet.com", target: "_blank" %> style quizzing application that helps you learn by taking quizzes and trying to improve your scores.
 </p>
 
 <%= image_tag 'quiz-bubble.png', height: 300 %>
-
 
 <h2>Features</h2>
 
@@ -14,12 +13,16 @@
 </p>
 
 <ul>
-  <li>Choose from premade quizzes on a variety of topics</li>
-  <li>Make your own quizzes to customize your learning</li>
-  <li>Compare your scores with other users</li>
+  <% features.each do |f| %>
+    <li><%= f %></li>
+  <% end %>
 </ul>
 
 <p>
   QuizMe also supports a variety of question styles like multiple choice and fill in the blank.
 </p>
+
+<p><%= link_to "About", about_path %></p>
+<p><%= link_to "Contact", contact_path %></p>
+
 
